# event_platform

./: .gitignore  manage.py  pyproject.toml  pytest.ini
core/: admin.py  apps.py  forms.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_alter_company_cover_alter_company_image_and_more.py  0003_customer_alter_manager_options_and_more.py  0004_remove_customer_name_remove_manager_name.py  0005_alter_comment_options_alter_company_options_and_more.py  0006_alter_customer_groups_and_more.py  0007_alter_ticketpurchase_code.py  0008_ticketpurchase_ticket_and_more.py  0009_alter_ticketpurchase_ticket_name_and_more.py  0010_remove_ticket_buyers.py  0011_delete_manager.py  0012_alter_comment_options_and_more.py  0013_alter_ticketpurchase_buyer_delete_customer.py  0014_ticket_quantity.py
core/models/: __init__.py  company_model.py  customer_model.py  event_model.py  ticket_model.py
core/static/css/: manage.css  messages.css
core/static/js/: manage.js  messages.js
core/templates/core/: base.html  event-tickets.html  event_create.html  event_delete.html  event_detail.html  event_list.html  event_update.html  home.html  template.html  user-tickets.html
core/templates/core/manage/: manage.html  manage_event_update.html  ticket_create.html  ticket_update.html
core/templates/registration/: login.html  sign_up.html
core/views/: __init__.py  event_views.py  page_views.py  ticket_views.py
event_platform/: asgi.py  settings.py  urls.py  wsgi.py
tests/: company_model_test.py  event_model_test.py  ticket_model_test.py
