[tool.poetry]
name = "event-platform"
version = "0.1.0"
description = ""
authors = ["Yuri Machado <ymachado1995@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0"
pillow = "^10.1.0"
pytest = "^7.4.3"
python-dotenv = "^1.0.0"
crispy-bootstrap4 = "^2023.1"
django-crispy-forms = "^2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
